# qCalculateVerticality

./: CMakeLists.txt  README.md  info.json  qCalculateVerticality.qrc
include/: CMakeLists.txt  ccCalculateVerticalityDlg.h  ccSliceExtrationDlg.h  qCalculateVerticality.h
src/: CMakeLists.txt  ccCalculateVerticalityDlg.cpp  ccSliceExtrationDlg.cpp  qCalculateVerticality.cpp
ui/: CMakeLists.txt  ccCalculateVerticalityDlg.ui  ccSliceExtrationDlg.ui
